--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ header {
 main{
     display: flex;
     flex-direction: row;
-    background: url('img/portada 2.png') no-repeat;
+    background: url('portada 2.png') no-repeat;
     background-size: cover;
     background-position: center;
     padding-bottom: 30px;
